<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/pg_image"
                android:layout_width="80dp"
                android:layout_height="147dp"
                android:src="@drawable/default_hero_image"
                android:layout_marginLeft="5dip"/>

            <Button
                android:id="@+id/chooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonrec"
                android:text="@string/choose_your_pg_image"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="5dip"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:text="@string/dialog_pg_name"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/name_edit"
                android:layout_height="wrap_content"
                android:layout_width="225dp"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:scrollHorizontally="true"
                android:gravity="fill_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:inputType="text"
                android:autofillHints="Brancaleone Da Norcia" />
            <TextView
                android:id="@+id/race_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:text="@string/dialog_pg_race"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/race_edit"
                android:layout_height="wrap_content"
                android:layout_width="225dp"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:scrollHorizontally="true"
                android:gravity="fill_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:inputType="text"
                android:autofillHints="Umano" />

            <TextView
                android:id="@+id/class_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:text="@string/dialog_pg_class"
                android:gravity="left"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/class_edit"
                android:layout_height="wrap_content"
                android:layout_width="225dp"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:scrollHorizontally="true"
                android:gravity="fill_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:inputType="text"
                android:autofillHints="Cavaliere"/>



        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sendtodm"
        android:text="@string/let_s_begin"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF" />

</LinearLayout>